src/exam/tests/t010.gpl
circle wheel;
triangle pyramid;
textbox banner;
double scifi = 1 ? pyramid : wheel;
double song =  1 ? banner : 1234;
